--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -20,6 +20,7 @@ h1:hover {
 
 nav {
     position: relative;
+    /* bottom: 35px; */
     bottom: 35px;
     min-width: 50vw;
     font-size: 1.1vw;
@@ -29,21 +30,21 @@ nav {
 nav > ul {
     list-style-type: none;
     text-align: center;
-    padding: 10px 0;
+    /* padding: 10px 0; */
 }
 
 nav > ul > li {
-    display: inline;
-    padding: 15px 0 10px 0;
-    margin: 10px;
+    /* display: inline; */
+    /* padding: 15px 0 10px 0; */
+    /* margin: 10px; */
 }
 
 nav > ul > li > a {
-    text-decoration: none;
+    /* text-decoration: none; */
     /* font-family: Arial, Helvetica, sans-serif; */
-    color: #f0cf48;
-    font-size: 17px;
-    padding: 5px;
+    /* color: #f0cf48; */
+    /* font-size: 17px; */
+    /* padding: 5px; */
 }
 
 nav > ul > li > a:hover {
@@ -66,7 +67,7 @@ main > ul {
 }
 
 main > ul > li {
-    /* margin: 40px 0px 0 0; */
+    margin: 40px 0px 0 0;
     padding: 20px 20px 20px 0;
 }
 
